2007-01-08 21:57  adb014

	* www/: Makefile, get-base-address, octave-forge.css: fix
	  validation errors in html

2007-01-08 21:50  hauberg

	* www/macros.m4: Current page isn't clickable in the top menu

2007-01-08 21:30  adb014

	* www/: NEWS.in, index.in: Update news items

2007-01-08 21:29  adb014

	* admin/make_index: Remove spurious output

2007-01-08 21:28  adb014

	* main/statistics/INDEX: That should read jsu{cdf,pdf} and not
	  jus{cdf,pdf}

2007-01-08 21:22  adb014

	* main/: miscellaneous/inst/zagzig.m, miscellaneous/inst/zigzag.m,
	  octcdf/inst/nctest.m: Fix copyright for AUTHORS build

2007-01-08 21:21  adb014

	* main/image/INDEX: index missing functions

2007-01-08 21:18  adb014

	* main/gsl/INDEX: index gdl_sf

2007-01-08 21:18  adb014

	* main/fixed/src/fixed.cc: modify macro to aid indexing

2007-01-08 21:16  adb014

	* main/INDEX: Fix INDEX for new and removed functions

2007-01-08 21:13  adb014

	* extra/xraylib/src/xraylib.cc: reorganize macros to aid indexing

2007-01-08 21:13  adb014

	* extra/xraylib/PKG_ADD: Add missing DCSP_Thoms function to
	  autoload

2007-01-08 21:12  adb014

	* extra/symband/src/Makefile: error in makefile prevented oct-file
	  being built

2007-01-08 21:09  adb014

	* extra/graceplot/: COPYING, DESCRIPTION, INDEX, NOINSTALL,
	  inst/.cvsignore, inst/alternatives/__errcomm__.m,
	  inst/alternatives/__errplot__.m,
	  inst/alternatives/__grpltfmt__.m, inst/alternatives/__plr1__.m,
	  inst/alternatives/__plr2__.m, inst/alternatives/__plr__.m,
	  inst/alternatives/__plt1__.m, inst/alternatives/__plt2__.m,
	  inst/alternatives/__plt2mm__.m, inst/alternatives/__plt2mv__.m,
	  inst/alternatives/__plt2ss__.m, inst/alternatives/__plt2vm__.m,
	  inst/alternatives/__plt2vv__.m, inst/alternatives/__plt__.m,
	  inst/alternatives/__pltopt1__.m, inst/alternatives/__pltopt__.m,
	  inst/alternatives/axis.m, inst/alternatives/bar.m,
	  inst/alternatives/cla.m, inst/alternatives/clf.m,